# zeno

./: .gitignore
patches/: libigl.patch  manifest.tsv  zpc.patch  zpc_jit_zpc.patch  zpc_jit_zpc_tpls.patch  zpc_tpls.patch
projects/FEM/src/bspline/: cubicBspline.h
projects/FEM/src/force_model/: plastic_force_model.h
ui/zenoedit/: CMakeLists.txt  zenomainwindow.cpp
ui/zenoedit/viewportinteraction/: nodesync.h
ui/zenoui/: CMakeLists.txt
zeno/include/zeno/utils/: PropertyVisitor.h
zeno/src/extra/: GlobalComm.cpp
zeno/tpls/include/: uuid_v4.h
zenovis/include/zenovis/bate/: FrameBufferRender.h
zenovis/include/zenovis/opengl/: common.h  shader.h
zenovis/src/: Scene.cpp
zenovis/src/bate/: FrameBufferPicker.cpp  HudGraphicPrimHighlight.cpp  RenderEngineBate.cpp
zenovis/zhxxvis/: main.cpp
